# stacked_linear_algebra_graph

./: .gitignore  Cargo.toml  LICENSE.md  README.md  contributor-license-agreement.md
.github/workflows/: cla.yml
benches/: apply_binary_operator_unchecked_index.rs  experiments.rs  matrix_read_vs_operator_copy.rs  sparse_vector_indexing_benchmark.rs  vector_hashmap_benchmark.rs
signatures/version1/: cla.json
src/: lib.rs
src/algorithms/: connected_vertices.rs  mod.rs
src/archive/: vertex_store_all_types.rs
src/archive/edge/: mod.rs
src/archive/indexed_data_store/: index.rs
src/archive/indexed_matrix_store/: adjacency_matrix.rs  indexed_matrix_store.rs  indexer.rs
src/archive/indexed_matrix_store_all_types/: indexed_matrix_store.rs  indexer.rs  mod.rs
src/archive/indexed_numerical_value_store/: indexer.rs  mod.rs  numerical_value_store.rs
src/error/: graph_computing_error.rs  logic_error.rs  mod.rs  other_error.rs  system_error.rs  user_error.rs
src/graph/: adjacency_matrix.rs  edge.rs  graph.rs  index.rs  indexer.rs  indexer_copy.rs  mod.rs  monitoring.rs  native_data_type.rs  vertex.rs
src/graph/edge/: adjacency_matrix.rs  edge.rs  edge_coordinate.rs  edge_type.rs  mod.rs
src/graph/edge_store/: adjacency_matrix.rs  edge_store.rs  mod.rs
src/graph/graph/: graph.rs  graphblas_operator_applier.rs  indexer.rs  mod.rs  monitoring.rs  vertex_store.rs
src/graph/indexed_data_store/: data_store.rs  mod.rs
src/graph/indexed_numerical_value_store/: index.rs  indexer.rs
src/graph/indexing/: assigned_index.rs  element_index_map.rs  index.rs  mod.rs
src/graph/value_type/: conversion.rs  macro_utils.rs  mod.rs  native.rs  value_type.rs  value_type_identifier.rs
src/graph/vertex/: mod.rs  vertex.rs  vertex_defined_by_index.rs  vertex_defined_by_key.rs  (+2 more)
src/graph_operators/: mod.rs
src/operations/: add_edge.rs  add_edge_type.rs  add_vertex.rs  add_vertex_copy.rs  add_vertex_key.rs  apply_binary_operator.rs  delete_edge.rs  delete_vertex.rs  drop_edge_type.rs  drop_vertex_type.rs  indexing.rs  mod.rs  read_edge.rs  read_edge_weight.rs  read_edgeweight.rs  read_vertex_value.rs  select_edge_type.rs  select_vertex.rs  step.rs  update_edge_weight.rs  update_vertex.rs  update_vertex_value.rs
src/operator_options/: mod.rs  options_for_operator_with_adjacency_matrix_as_right_argument.rs
src/operators/: add_edge.rs  add_edge_type.rs  add_vertex.rs  add_vertex_key.rs  add_vertex_type.rs  delete_edge.rs  delete_vertex.rs  drop_edge_type.rs  drop_vertex_type.rs  graphblas_operator_applier.rs  indexing.rs  mod.rs  options.rs  read_adjacency_matrix.rs  read_edge_weight.rs  read_vertex_value.rs  read_vertex_vector.rs  transpose_adjacency_matrix.rs  update_edge_weight.rs
src/tests/: doc_test.rs  mod.rs  standard_graph_for_testing.rs
src/transaction/: mod.rs
src/util/: indexed_data_store.rs  mod.rs
src/versioned_graph/: mod.rs
src/versioned_graph_operators/: mod.rs
(+1093 files in other folders)
