[package]
name = "cairn-knowledge-graph"
version = "0.1.2"
authors = ["code_sam <mail@samdekker.nl>"]
description = "An embedded and in-memory knowledge graph for static specification analysis."
edition = "2018"
keywords = ["knowledge", "graph"]
license = "CC-BY-NC-4.0"
readme = "README.md"
repository = "https://github.com/code-sam/cairn-knowledge-graph"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphblas_sparse_linear_algebra = {version = "0.8"}
hashbrown = {version = "0.11", features = ["rayon"]}
once_cell = {version = "1.8"}
rayon = {version = "1.5"}

[dev-dependencies]
criterion = "0.3"
rand = "0.8"
rustc-hash = {version = "1.1"}

[[bench]]
name = "experiments"
# name = "vector_hashmap_benchmark"
harness = false