[package]
name = "cairn-knowledge-graph"
version = "0.4.2"
authors = ["code_sam <mail@samdekker.nl>"]
description = "An embedded and in-memory knowledge graph for static specification analysis."
edition = "2021"
keywords = ["knowledge", "graph"]
license = "CC-BY-NC-4.0"
readme = "README.md"
repository = "https://github.com/code-sam/cairn-knowledge-graph"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphblas_sparse_linear_algebra = {version = "0.18.2"}
hashbrown = {version = "0.13", features = ["rayon"]}
once_cell = {version = "1.17"}
paste = {version = "1.0"}
rayon = {version = "1.6"}

[dev-dependencies]
criterion = "0.4"
rand = "0.8"
rustc-hash = {version = "1.1"}
nohash-hasher = "0.2"

[[bench]]
# name = "experiments"
# name = "vector_hashmap_benchmark"
name = "sparse_vector_indexing_benchmark"
harness = false