[package]
name = "stacked_linear_algebra_graph"
version = "0.4.0"
authors = ["code_sam <mail@samdekker.nl>"]
description = "Embedded in-memory graph using sparse linear algebra"
edition = "2021"
keywords = ["graphblas", "graph"]
categories = ["mathematics"]
license = "CC-BY-NC-4.0"
readme = "README.md"
repository = "https://github.com/code-sam/stacked_linear_algebra_graph"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphblas_sparse_linear_algebra = {version = "0.29.0"}
# graphblas_sparse_linear_algebra = {git = "https://github.com/code-sam/graphblas_sparse_linear_algebra.git", branch = "simpler-operators"}
hashbrown = {version = "0.13", features = ["rayon"]}
once_cell = {version = "1.17"}
paste = {version = "1.0"}
rayon = {version = "1.7"}

[dev-dependencies]
criterion = "0.4"
rand = "0.8"
rustc-hash = {version = "1.1"}
nohash-hasher = "0.2"

[[bench]]
# name = "experiments"
# name = "vector_hashmap_benchmark"
# name = "sparse_vector_indexing_benchmark"
name = "apply_binary_operator_unchecked_index"
harness = false